# rust-polars-experiment

./: .env  Cargo.toml  LICENSE  README.md
src/: main.rs
